# ferride

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: CI.yml  rust.yml
docs/: Cargo.toml
src/: greeter.rs  info.rs  main.rs  project.rs  utils.rs  welcome.rs  window.rs
src/resources/: resources.xml  welcome.ui~
src/resources/emojis/: license.txt
src/welcome/: imp.rs  mod.rs
src/window/: action_bar.rs  imp.rs  menu_bar.rs  mod.rs  side_panel.rs
