[package]
name = "ride"
version = "0.1.1"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A Simple, Cross-platform Rust IDE"
repository = "https://github.com/skylinecc/ride"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4" }
