[package]
name = "ferride"
version = "0.1.0"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A Simple, Cross-platform Rust IDE"
repository = "https://github.com/skylinecc/ride"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4" }
gtk-macros = "0.2.0"
cargo_toml = "0.8.1"
pretty_env_logger = "0.4.0"
log = "0.4.14"
# alacritty-gobject = { git = "https://github.com/DefunctLizard/alacritty-gobject" }
