[package]
name = "ferride"
version = "0.1.0"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A Simple, Cross-platform Rust IDE"
repository = "https://github.com/skylinecc/ride"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4" }
clap = "2.33.3"
log = "0.4"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
cargo_toml = "0.9.1"
fstream = "0.1.2"
thiserror = "1.0.24"

# lazy_static = "1.4.0"
# directories = "3.0.2"
# once_cell = "1.5"
# alacritty-gobject = { git = "https://github.com/DefunctLizard/alacritty-gobject" }
